[tool.poetry]
name = "flask_blog"
version = "0.1.0"
description = ""
authors = ["Azamat Galimzhanov <azamat@galimzhanov.com>"]

[tool.poetry.dependencies]
python = "3.8"
flask_sqlalchemy = "^2.4.1"
flask-migrate = "^2.5.2"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"
flask-shell-ipython = "^0.4.1"
pytest = "^5.3.5"
faker = "^4.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
